--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 argon2-cffi==21.1.0
-asgiref==3.4.1
+asgiref==3.5.0
 astroid==2.7.3
 attrs==21.2.0
 autopep8==1.5.7
@@ -10,7 +10,7 @@ bleach==4.1.0
 certifi==2021.5.30
 cffi==1.14.6
 charset-normalizer==2.0.4
-cloudinary==1.28.0
+cloudinary==1.28.1
 colorama==0.4.4
 cryptography==3.4.8
 debugpy==1.4.3
@@ -20,6 +20,7 @@ distlib==0.3.2
 dj-database-url==0.5.0
 dj3-cloudinary-storage==0.0.6
 Django==3.2
+django-crispy-forms==1.13.0
 django-summernote==0.8.20.0
 docutils==0.17.1
 entrypoints==0.3
