--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,7 @@
    "cSpell.words": [
       "Balsamiq",
       "Cloudinary",
+      "errorlist",
       "favourite",
       "favourites",
       "Flexbox",
