fix duplicate titleerror on add recipe page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,9 +25,13 @@
    "editor.defaultFormatter": "HookyQR.beautify",
    "python.pythonPath": "/home/gitpod/.pyenv/versions/3.8.12/bin/python",
    "cSpell.words": [
+      "Baloo",
       "Balsamiq",
+      "Canva",
       "Cloudinary",
+      "congifvars",
       "errorlist",
+      "esversion",
       "favourite",
       "favourites",
       "Flexbox",
@@ -40,9 +44,14 @@
       "newingredient",
       "Procfile",
       "Pylot",
+      "Ribeye",
+      "Roboto",
+      "staticcollect",
       "staticfile",
       "STATICFILES",
       "Summernote",
+      "Thambi",
+      "unliked",
       "utilised",
       "Wireframes",
       "wsgi"
